--- a/packages/base/assets/css/styles.css
+++ b/packages/base/assets/css/styles.css
@@ -1,3 +1,39 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+    color-scheme: light dark;
+}
+
+@layer base {
+    
+
+    /* @media (prefers-color-scheme: dark) {
+        :root {
+            --color-primary: 241 245 249;
+            --color-text: 245 245 245;
+        }
+    }
+
+    @media (prefers-color-scheme: light) {
+        :root {
+            --color-primary: 241 245 249;
+            --color-text: 245 245 245;
+        }
+    } */
+
+    :root {
+        --color-primary: 51 65 85;
+        --color-text: 39 39 42;
+    }
+
+    :root[class~="dark-mode"] {
+        --color-primary: 241 245 249;
+        --color-text: 245 245 245;
+    }
+}
+
+.fk-inner {
+    @apply focus-within:ring-primary
+}
